# soroban-test

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh
js_side/: call_contract.js  index.js  package.json
js_side/data/: trust.json
src/: lib.rs  page_rank.rs  test.rs  types.rs
src/my_contract/: Cargo.toml
src/my_contract/src/: lib.rs  tests.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
